--- a/apps/validator/package.json
+++ b/apps/validator/package.json
@@ -7,5 +7,10 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@solana/kit": "^2.1.0",
+    "@solana/web3.js": "1",
+    "tweetnacl-util": "^0.15.1"
   }
 }
